force-app/main/default/objects/MiniCaseFieldMapping__c/MiniCaseFieldMapping__c.object-meta.xml
<CustomObject>
    <label>Enquiry Mapping</label>
    <nameField>
        <label>Mini Case Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enquiry Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>