force-app/main/default/objects/MiniCaseFieldMapping__c/fields/MappingModel__c.field-meta.xml
<CustomField>
    <fullName>MappingModel__c</fullName>
    <description>Identifies if this mapping is specific to the new Unified agents or for the existing Classic setup</description>
    <inlineHelpText>Identifies if this mapping is specific to the new Unified agents or for the existing Classic setup</inlineHelpText>
    <label>Mapping Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unified</fullName>
                <default>true</default>
                <label>Unified</label>
            </value>
            <value>
                <fullName>Classic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>