force-app/main/default/objects/MiniCaseFieldMapping__c/fields/ProductSubcategory__c.field-meta.xml
<CustomField>
    <fullName>ProductSubcategory__c</fullName>
    <label>Product Subcategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>