force-app/main/default/objects/MiniCaseFieldMapping__c/fields/SAPProductCategory__c.field-meta.xml
<CustomField>
    <fullName>SAPProductCategory__c</fullName>
    <label>SAP Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AaE</fullName>
            </value>
            <value>
                <fullName>Carded Item</fullName>
            </value>
            <value>
                <fullName>Cash To Collect</fullName>
            </value>
            <value>
                <fullName>EMS</fullName>
            </value>
            <value>
                <fullName>eParcel</fullName>
            </value>
            <value>
                <fullName>Express Post</fullName>
            </value>
            <value>
                <fullName>Express Post Platinum</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Messenger Post</fullName>
            </value>
            <value>
                <fullName>NSW Education Board Returns</fullName>
            </value>
            <value>
                <fullName>Ordinary Parcel</fullName>
            </value>
            <value>
                <fullName>Parcel Post</fullName>
            </value>
            <value>
                <fullName>Parcel Track</fullName>
            </value>
            <value>
                <fullName>Receipted Delivery</fullName>
            </value>
            <value>
                <fullName>Registered Post</fullName>
            </value>
            <value>
                <fullName>Star Track Express</fullName>
            </value>
            <value>
                <fullName>SWADS</fullName>
            </value>
            <value>
                <fullName>TOPS End</fullName>
            </value>
            <value>
                <fullName>TOPS Node</fullName>
            </value>
            <value>
                <fullName>Parcel Domestic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>