force-app/main/default/objects/MiniCaseFieldMapping__c/fields/SAPProductSubcategory__c.field-meta.xml
<CustomField>
    <fullName>SAPProductSubcategory__c</fullName>
    <label>SAP Product Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>500g Satchel</fullName>
            </value>
            <value>
                <fullName>AaE</fullName>
            </value>
            <value>
                <fullName>Air Parcel Return</fullName>
            </value>
            <value>
                <fullName>Australia Post Returns</fullName>
            </value>
            <value>
                <fullName>B4 size prepaid envelope</fullName>
            </value>
            <value>
                <fullName>Carded parcel</fullName>
            </value>
            <value>
                <fullName>Cash on Delivery</fullName>
            </value>
            <value>
                <fullName>Courier Post Large Satchel</fullName>
            </value>
            <value>
                <fullName>Courier Post Medium Satchel</fullName>
            </value>
            <value>
                <fullName>Courier Post Small Satchel</fullName>
            </value>
            <value>
                <fullName>Courier Post with signature - C&amp;S</fullName>
            </value>
            <value>
                <fullName>Courier Post with signature - Flexi POS</fullName>
            </value>
            <value>
                <fullName>Courier Post with signature - PA</fullName>
            </value>
            <value>
                <fullName>Courier Post with signature - SST</fullName>
            </value>
            <value>
                <fullName>ECI Platinum</fullName>
            </value>
            <value>
                <fullName>EMS</fullName>
            </value>
            <value>
                <fullName>EMS Return</fullName>
            </value>
            <value>
                <fullName>EP 3kg Large Satch</fullName>
            </value>
            <value>
                <fullName>EP 3kg National</fullName>
            </value>
            <value>
                <fullName>EP 3kg Satch WA SA Other</fullName>
            </value>
            <value>
                <fullName>EP 500g National</fullName>
            </value>
            <value>
                <fullName>EP 500g Satch WA SA Other</fullName>
            </value>
            <value>
                <fullName>EP 5kg Satch</fullName>
            </value>
            <value>
                <fullName>eParcel Call For Return</fullName>
            </value>
            <value>
                <fullName>eParcel Cash to Collect</fullName>
            </value>
            <value>
                <fullName>eParcel Express Post</fullName>
            </value>
            <value>
                <fullName>eParcel Express Post - Cash To Collect</fullName>
            </value>
            <value>
                <fullName>eParcel Express Post Return</fullName>
            </value>
            <value>
                <fullName>eParcel Post Return</fullName>
            </value>
            <value>
                <fullName>eParcel Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>