force-app/main/default/objects/MiniCaseFieldMapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Type__c</columns>
    <columns>ProductCategory__c</columns>
    <columns>ProductSubcategory__c</columns>
    <columns>CTICustomerSegment__c</columns>
    <columns>CTIServiceType__c</columns>
    <columns>SAPProductCategory__c</columns>
    <columns>SAPProductSubcategory__c</columns>
    <columns>CTIKey__c</columns>
    <columns>SAPKey__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>